give ldp ctrl a z-index to prevent it from being covered by color block

--- a/src/ldpp.styl
+++ b/src/ldpp.styl
@@ -198,6 +198,7 @@ for num in (1..3)
     border-radius: 0 3px 3px 0
   .ctrl
     position: absolute
+    z-index: 1
     display: flex
     flex-wrap: nowrap
     justify-content: center
